crates/pcb-zen/tests/snapshots/interface_templates_snapshot__interface_multiple_net_templates.snap
---
source: crates/pcb-zen/tests/interface_templates_snapshot.rs
expression: snapshot_output
---
(export (version "E")
  (design
    (source "unknown")
    (date "")
    (tool "pcb"))
  (components
    (comp (ref "U1")
      (value "mcu")
      (footprint "QFN:32")
      (libsource (lib "lib") (part "mcu") (description "unknown"))
      (sheetpath (names "U1") (tstamps "bb9170a7-68d4-539c-bed9-f036cbc8d7db"))
      (tstamps "bb9170a7-68d4-539c-bed9-f036cbc8d7db")
      (property (name "Reference") (value "U1"))
      (property (name "manufacturer") (value "TEST"))
      (property (name "part") (value "{\"manufacturer\":\"TEST\",\"mpn\":\"mcu\",\"qualifications\":[]}"))
    )
    (comp (ref "U2")
      (value "sensor")
      (footprint "SOT:23-6")
      (libsource (lib "lib") (part "sensor") (description "unknown"))
      (sheetpath (names "U2") (tstamps "36c85f89-8191-5cff-96a2-01503cd7115a"))
      (tstamps "36c85f89-8191-5cff-96a2-01503cd7115a")
      (property (name "Reference") (value "U2"))
      (property (name "manufacturer") (value "TEST"))
      (property (name "part") (value "{\"manufacturer\":\"TEST\",\"mpn\":\"sensor\",\"qualifications\":[]}"))
    )
  )
  (libparts
    (libpart (lib "lib") (part "mcu")
      (description "")
      (docs "~")
      (footprints
        (fp "*"))
      (pins
        (pin (num "1") (name "VCC") (type "stereo"))
        (pin (num "2") (name "GND") (type "stereo"))
        (pin (num "3") (name "EN") (type "stereo"))
      )
    )
    (libpart (lib "lib") (part "sensor")
      (description "")
      (docs "~")
      (footprints
        (fp "*"))
      (pins
        (pin (num "1") (name "VDD") (type "stereo"))
        (pin (num "2") (name "VSS") (type "stereo"))
        (pin (num "3") (name "ENABLE") (type "stereo"))
      )
    )
  )
  (nets
    (net (code "1") (name "MCU_3V3")
      (node (ref "U1") (pin "1") (pintype "stereo"))
    )
    (net (code "2") (name "MCU_EN")
      (node (ref "U1") (pin "3") (pintype "stereo"))
    )
    (net (code "3") (name "MCU_GND")
      (node (ref "U1") (pin "2") (pintype "stereo"))
    )
    (net (code "4") (name "SENSOR_3V3")
      (node (ref "U2") (pin "1") (pintype "stereo"))
    )
    (net (code "5") (name "SENSOR_EN")
      (node (ref "U2") (pin "3") (pintype "stereo"))
    )
    (net (code "6") (name "SENSOR_GND")
      (node (ref "U2") (pin "2") (pintype "stereo"))
    )
  )
)
