crates/pcb-zen/tests/snapshots/interface_templates_snapshot__interface_template_property_inheritance.snap
---
source: crates/pcb-zen/tests/interface_templates_snapshot.rs
expression: snapshot_output
---
(export (version "E")
  (design
    (source "unknown")
    (date "")
    (tool "pcb"))
  (components
    (comp (ref "U1")
      (value "processor")
      (footprint "BGA:256")
      (libsource (lib "lib") (part "processor") (description "unknown"))
      (sheetpath (names "CPU") (tstamps "5e0c7041-4196-5aa4-8e84-bc97699f0f38"))
      (tstamps "5e0c7041-4196-5aa4-8e84-bc97699f0f38")
      (property (name "Reference") (value "U1"))
      (property (name "manufacturer") (value "TEST"))
      (property (name "part") (value "{\"manufacturer\":\"TEST\",\"mpn\":\"processor\",\"qualifications\":[]}"))
    )
    (comp (ref "U2")
      (value "memory")
      (footprint "TSOP:48")
      (libsource (lib "lib") (part "memory") (description "unknown"))
      (sheetpath (names "MEM") (tstamps "55dd74bc-6fd0-5d18-9878-1dd593abf8dd"))
      (tstamps "55dd74bc-6fd0-5d18-9878-1dd593abf8dd")
      (property (name "Reference") (value "U2"))
      (property (name "manufacturer") (value "TEST"))
      (property (name "part") (value "{\"manufacturer\":\"TEST\",\"mpn\":\"memory\",\"qualifications\":[]}"))
    )
  )
  (libparts
    (libpart (lib "lib") (part "memory")
      (description "")
      (docs "~")
      (footprints
        (fp "*"))
      (pins
        (pin (num "1") (name "CLK") (type "stereo"))
        (pin (num "2") (name "DATA") (type "stereo"))
        (pin (num "3") (name "VALID") (type "stereo"))
      )
    )
    (libpart (lib "lib") (part "processor")
      (description "")
      (docs "~")
      (footprints
        (fp "*"))
      (pins
        (pin (num "1") (name "CLK") (type "stereo"))
        (pin (num "2") (name "DATA") (type "stereo"))
        (pin (num "3") (name "VALID") (type "stereo"))
      )
    )
  )
  (nets
    (net (code "1") (name "CPU_CLK")
      (node (ref "U1") (pin "1") (pintype "stereo"))
    )
    (net (code "2") (name "CPU_DATA")
      (node (ref "U1") (pin "2") (pintype "stereo"))
    )
    (net (code "3") (name "CPU_VALID")
      (node (ref "U1") (pin "3") (pintype "stereo"))
    )
    (net (code "4") (name "MEM_CLK")
      (node (ref "U2") (pin "1") (pintype "stereo"))
    )
    (net (code "5") (name "MEM_DATA")
      (node (ref "U2") (pin "2") (pintype "stereo"))
    )
    (net (code "6") (name "MEM_VALID")
      (node (ref "U2") (pin "3") (pintype "stereo"))
    )
  )
)
