crates/pcb-zen/tests/snapshots/interface_templates_snapshot__interface_using_promotion_targets.snap
---
source: crates/pcb-zen/tests/interface_templates_snapshot.rs
expression: netlist
---
(export (version "E")
  (design
    (source "unknown")
    (date "")
    (tool "pcb"))
  (components
    (comp (ref "U1")
      (value "regulator")
      (footprint "SOT:23-5")
      (libsource (lib "lib") (part "regulator") (description "unknown"))
      (sheetpath (names "U1") (tstamps "bb9170a7-68d4-539c-bed9-f036cbc8d7db"))
      (tstamps "bb9170a7-68d4-539c-bed9-f036cbc8d7db")
      (property (name "Reference") (value "U1"))
    )
    (comp (ref "U2")
      (value "mcu")
      (footprint "QFN:32")
      (libsource (lib "lib") (part "mcu") (description "unknown"))
      (sheetpath (names "U2") (tstamps "36c85f89-8191-5cff-96a2-01503cd7115a"))
      (tstamps "36c85f89-8191-5cff-96a2-01503cd7115a")
      (property (name "Reference") (value "U2"))
    )
  )
  (libparts
    (libpart (lib "lib") (part "?")
      (description "")
      (docs "~")
      (footprints
        (fp "*"))
      (pins
        (pin (num "1") (name "VIN") (type "stereo"))
        (pin (num "1") (name "TX") (type "stereo"))
        (pin (num "2") (name "VOUT") (type "stereo"))
        (pin (num "2") (name "RX") (type "stereo"))
        (pin (num "3") (name "GND") (type "stereo"))
        (pin (num "3") (name "CK") (type "stereo"))
        (pin (num "4") (name "RTS") (type "stereo"))
        (pin (num "5") (name "CTS") (type "stereo"))
      )
    )
  )
  (nets
    (net (code "1") (name "COMM_USART_CK")
      (node (ref "U2") (pin "3") (pintype "stereo"))
    )
    (net (code "2") (name "COMM_USART_CTS")
      (node (ref "U2") (pin "5") (pintype "stereo"))
    )
    (net (code "3") (name "COMM_USART_RTS")
      (node (ref "U2") (pin "4") (pintype "stereo"))
    )
    (net (code "4") (name "COMM_uart_UART_RX")
      (node (ref "U2") (pin "2") (pintype "stereo"))
    )
    (net (code "5") (name "COMM_uart_UART_TX")
      (node (ref "U2") (pin "1") (pintype "stereo"))
    )
    (net (code "6") (name "GND")
      (node (ref "U1") (pin "3") (pintype "stereo"))
    )
    (net (code "7") (name "MAIN_VCC")
      (node (ref "U1") (pin "2") (pintype "stereo"))
    )
    (net (code "8") (name "VIN")
      (node (ref "U1") (pin "1") (pintype "stereo"))
    )
  )
)
